# deep-parity

./: README.md  analysis_jax.ipynb  calculate_hessian.py  critical_index.ipynb  fisher_analysis.py  one_layer_model.ipynb  parity_one_layer_preliminary.ipynb  pyproject.toml  random_functions.ipynb  scratchpad.ipynb  train_hadamard.py  train_jax.py  train_parity.py  train_sparse_jax.py  train_sparse_parity.py  train_sparse_torch.py  train_symmetric.py  train_torch.py
src/deep_parity/: __init__.py  boolean_cube.py  model.py  train_utils.py
src/deep_parity/jax/: boolean_cube.py  model.py
src/deep_parity/torch/: boolean_cube.py  model.py
writeup/: parity_blog.html  parity_blog.qmd
writeup/data/: min_max_ratio.parquet
