[project]
name = "deep-parity"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dashiell Stander", email = "dash.stander@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.2.4",
    "numpy>=1.24.4",
    "tqdm>=4.66.4",
    "wandb>=0.17.5",
    "matplotlib>=3.7.5",
    "plotnine>=0.12.4",
    "plotly>=5.23.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "iprogress>=0.4",
    "jax>=0.5.2",
    "equinox>=0.11.12",
    "optax>=0.2.4",
    "torch>=2.6.0",
    "polars>=1.25.2",
    "pyarrow>=19.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
    "git-filter-repo>=2.45.0",
]

[[tool.rye.sources]]
name = "google-jax"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
type = "find-links"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_parity"]
